# pyfuck

./: README.md
pyfuck/: README.md  main.py  pyproject.toml  t.py
