[tool.poetry]
name = "pyfuck"
version = "0.1.0"
description = ""
authors = ["Jo Z Blocks <JoZaBlocks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
termcolor = "^2.4.0"
pyfiglet = "^1.0.2"
colorama = "^0.4.6"
astunparse = "^1.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
